from dataclasses import dataclass

from .operation import Operation


@dataclass
class Deposit(Operation):
    pass
