from dataclasses import dataclass

from .operation import Operation


@dataclass
class Withdrawal(Operation):
    pass
